--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   ],
   "author": "Thanakrit Weekhamchai",
   "homepage": "https://github.com/dumbest/rn-background-execution",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dumbest/rn-background-execution.git"
+  },
   "license": "MIT",
   "peerDependencies": {
     "react-native": "^0.61.5"
